--- a/themes/x/layouts/partials/related-posts.html
+++ b/themes/x/layouts/partials/related-posts.html
@@ -1,5 +1,5 @@
 <div class="text-center bg-success">
-	<h5 class="card-header mb-1 text-light">More Recepi</h5>
+	<h5 class="card-header mb-1 text-light">Popular Post</h5>
 </div>
 
 {{ range first 6 (shuffle (where (where site.RegularPages "Type" "in" site.Params.mainSections) "Title" "!=" .Title )) }}
